# avaria

./: .gitignore  Cargo.toml  Makefile  README.md  limine.conf
.cargo/: config.toml
modules/init/: Cargo.toml
modules/init/src/: main.rs
modules/memtest/: Cargo.toml  link.ld
modules/memtest/.cargo/: config.toml
modules/memtest/src/: main.rs
src/: main.rs
src/kern/: mem.rs  mod.rs  sched.rs  serial.rs
src/kern/arch/x86_64/: cpu.rs  gdt.rs  idt.rs  ipc.rs  lapic.rs  mod.rs  pic.rs  pit.rs  smp.rs  sse.rs  tsc.rs  tss.rs
src/kern/crates/avaria-api/: Cargo.toml
src/kern/crates/avaria-api/src/: lib.rs
src/kern/crates/avaria-elf/: Cargo.toml
src/kern/crates/avaria-elf/src/: lib.rs
src/kern/crates/kernix-api/: Cargo.toml
src/kern/crates/kernix-api/src/: lib.rs
src/kern/crates/kernix-elf/: Cargo.toml
src/kern/crates/kernix-elf/src/: header.rs  loader.rs
src/kern/drv/: mod.rs  pci.rs
src/kern/drv/disk/: ahci.rs
src/kern/drv/ps2/: mod.rs
src/kern/drv/ring3/: mod.rs
src/kern/drv/usb/: mod.rs
src/kern/fs/: initrd.rs  mod.rs  vfs.rs
src/kern/fs/ext3/: block.rs  dir.rs  inode.rs  mod.rs  superblock.rs
src/kern/gfx/: mod.rs  psf.rs  vesa.rs
src/kern/kxvm/: syscall.rs
src/kern/mm/: buddy.rs  slab.rs
