[package]
name = "avaria"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src/kern/crates/avaria-elf", "src/kern/crates/avaria-api"]
exclude = ["modules/memtest", "modules/init"]

[dependencies]
limine = "0.5"
avaria-elf = { path = "src/kern/crates/avaria-elf" }
avaria-api = { path = "src/kern/crates/avaria-api" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
